# face_verification_api

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/face_verification_api/: __init__.py  face_verification_api.py
